# sc2pp

./: .gitmodules  CMakeLists.txt
include/sc2pp/: Actions.h  Agent.h  Common.h  Map.h  Observation.h  Planner.h  Query.h  SC2Client.h  SC2Context.h  SC2IDs.h
include/sc2pp/utils/: Footprints.h  Grid.h  GridUtils.h  GridView.h  GridView.hpp  UnitPool.h  UnitQuery.h  UnitTraits.h
src/: Actions.cpp  Actions.h  Agent.cpp  CMakeLists.txt  Converters.cpp  Converters.h  Map.cpp  Observation.cpp  Planner.cpp  Query.cpp  SC2Client.cpp  SC2Client.h  SC2Context.cpp  SC2IDs.h  SC2Session.cpp  SC2Session.h  Sc2Session.cpp  Sc2Session.h  TestAgent.cpp  TestAgent.h  UnitPool.h  main.cpp
src/utils/: GridView.cpp  UnitPool.cpp  UnitQuery.cpp  UnitTraits.cpp
test/: CMakeLists.txt  Planner.cpp  Planner.h  TestAgent.cpp  TestAgent.h
